src/objects/Payments_Accounts_Rpt__c.object
<CustomObject>
    <description>Reporting Object, uploaded from IOD, with data consisting of payments related to Accounts
FOR REPORTING PURPOSES ONLY</description>
    <fields>
        <fullName>AccountNumber__c</fullName>
        <label>AccountNumber</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <label>Account_Owner</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payments_Accounts_Rpts</relationshipLabel>
        <relationshipName>Payments_Accounts_Rpts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Check_number__c</fullName>
        <label>Check_number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CostCenter__c</fullName>
        <label>CostCenter</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_created_in_TIGERS__c</fullName>
        <label>Date created in TIGERS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_paid__c</fullName>
        <label>Date paid</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Done_by_BusOps__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Done by BusOps?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InvoiceDate__c</fullName>
        <label>InvoiceDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <label>Invoice</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Refresh__c</fullName>
        <label>Last_Refresh</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO__c</fullName>
        <label>PO</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PR__c</fullName>
        <label>PR</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Phase__c</fullName>
        <label>Payment_Phase</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Status__c</fullName>
        <label>Payment_Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment_Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PaymentName</label>
        <referenceTo>Payment__c</referenceTo>
        <relationshipLabel>Payments_Accounts_Rpts</relationshipLabel>
        <relationshipName>Payments_Accounts_Rpts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>of_Related_Contracts__c</fullName>
        <label># of Related Contracts</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Payments_Accounts_Rpt</label>
    <nameField>
        <label>Payments_Accounts_Rpt Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payments_Accounts_Rpts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>